# django-djson

./: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
demo/: settings.py
demo_app/: admin.py  models.py
demo_app/migrations/: 0001_initial.py
django_djson/: apps.py
