[tool.poetry]
name = "django-djson"
version = "0.1.0"
description = "Django admin widget for JSON fields"
authors = ["Vahid Al <thevahidal@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "django_djson"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
python-decouple = "^3.7"
psycopg2-binary = "^2.9.5"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pre-commit = "^2.21.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
django-extensions = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
